# runpod-faster-whisper

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
.cursor/: mcp.json
.github/: dependabot.yml
.github/workflows/: CD-docker.yml
builder/: fetch_models.py  requirements.txt
src/: handler.py  predict.py  rp_schema.py  schema.py
