[project]
name = "runpod-faster-whisper"
version = "0.2.0"
description = "A slimmer, more efficient Faster Whisper worker for RunPod serverless."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "hf-xet>=1.2.0",
    "runpod>=1.8.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
